typescript/checker/tests/conformance/parser/ecmascript5/Expressions/parserObjectCreation2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            24,
        ),
        hi: BytePos(
            27,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Expressions/parserObjectCreation2.ts:1:9
  |
1 | new new Foo()()
  |         ^^^

